--- a/concepts/core-architecture/mocking-principles.mdx
+++ b/concepts/core-architecture/mocking-principles.mdx
@@ -1,37 +1,312 @@
 ---
-title: "Mocking Fundamentals"
-description: "Understand the principles behind GoogleMock's approach to mocking: how mocks are designed, how behaviors and expectations are specified, and the ways in which strictness, cardinality, and matcher logic are architected to produce expressive, reliable test doubles."
+title: "Mocking in C++: Principles and Practices"
+description: "Discover the design and philosophy of GoogleMock: how interfaces are mocked, how expectations and behaviors are specified, and how GoogleMock leverages C++ metaprogramming to enable flexible, type-safe mocks for unit and integration tests."
 ---
 
-# Mocking Fundamentals
+# Mocking in C++: Principles and Practices
 
-GoogleMock (gMock) provides a powerful and flexible mechanism to create mock objects in C++ tests, enabling detailed control over mock behavior and verification of interactions. This guide presents the foundational concepts behind GoogleMock's approach to mocking, explaining how mocks are designed, how users specify behaviors and expectations, and how strictness, cardinality, and matcher logic interplay to make test doubles expressive and reliable.
+GoogleMock (gMock) is a powerful C++ framework that enables you to create mock classes and specify their expected behaviors for unit and integration testing. This document explains the core concepts and philosophy behind gMock’s design, illustrating how interfaces are mocked, how expectations and behaviors are defined, and how C++ metaprogramming underpins flexible, type-safe mocking.
 
 ---
 
-## 1. Understanding Mock Classes
+## 1. Understanding Mock Objects
 
-### What is a Mock?
-A mock object in gMock is a test double that simulates the behavior of real objects by allowing you to:
+A *mock object* is a test double that implements the same interface as a real class but allows precise control and verification of interactions at runtime. It acts as a stand-in during testing, helping you observe how your code under test communicates with its dependencies.
 
-- Specify the expected interactions (method calls, arguments, call order).
-- Define the behavior of these calls (return values, side effects).
-- Verify that the code under test interacts correctly with collaborators.
+### Why Use Mocks?
+- **Isolate Components:** Mocks replace complex or slow dependencies, reducing test flakiness and runtime.
+- **Validate Interactions:** Ensure methods are called with expected arguments, number of times, and order.
+- **Simulate Behaviors:** Easily simulate errors or special cases in dependencies hard to replicate with real objects.
 
-### Creating a Mock Class
-Mocks are defined using regular C++ class inheritance with the addition of the `MOCK_METHOD` macro to declare mock methods. These methods replace the implementation details with stubs that track calls and enforce expectations.
+### Key Mocking Principles
+- **Code to Interfaces:** Always mock against virtual interfaces, not concrete classes.
+- **Virtual Destructors:** Ensure destructors are virtual to avoid undefined behavior.
+- **Expectations Set *Before* Use:** Define expectations (using `EXPECT_CALL`) prior to exercising the code under test.
+- **Default Actions vs. Expectations:** `ON_CALL` defines default behavior without requiring the call. `EXPECT_CALL` sets both expectation and behavior.
 
-Key points:
-- Mock methods must be declared in the `public` section (even if the real method is `protected` or `private`).
-- `MOCK_METHOD` syntax mirrors the function signature: `MOCK_METHOD(ReturnType, MethodName, (Args...), (Specs...));`
-- Common method qualifiers like `const`, `override`, and `noexcept` are supported to ensure precise mock behavior.
+<Tip>
+Mock objects are Naggy by default, meaning uninteresting calls generate warnings. To suppress these, use `NiceMock`; to make uninteresting calls errors, use `StrictMock`.
+</Tip>
+
+---
+
+## 2. Defining Mock Classes with gMock
+
+The primary way to define mocks in GoogleMock is by subclassing the interface and using the `MOCK_METHOD` macro to generate mock method implementations.
+
+### The `MOCK_METHOD` Macro
+
+```cpp
+MOCK_METHOD(ReturnType, MethodName, (Args...), (Qualifiers));
+```
+
+- **ReturnType:** The return type of the mocked method.
+- **MethodName:** The method's name.
+- **Args:** Argument list enclosed in parentheses.
+- **Qualifiers:** Optional method specifiers like `const`, `override`, `noexcept`, or calling conventions.
 
 Example:
+
 ```cpp
+class Foo {
+ public:
+  virtual ~Foo() {}  // Must be virtual
+  virtual int GetSize() const = 0;
+  virtual std::string Describe(const char* name) = 0;
+};
+
+class MockFoo : public Foo {
+ public:
+  MOCK_METHOD(int, GetSize, (), (const, override));
+  MOCK_METHOD(std::string, Describe, (const char* name), (override));
+};
+```
+
+**Note:** Mock methods must be declared in the `public:` section regardless of the base class method visibility to allow `EXPECT_CALL` and `ON_CALL` access.
+
+### Mocking Overloaded Methods
+
+Mock all overloaded variants explicitly with correct signatures. Use `using BaseClass::MethodName;` to avoid hiding versions you don't mock.
+
+### Mocking Templates
+
+Templates are mocked like any other class. Each template specialization gets a mock:
+
+```cpp
+template <typename T>
+class StackInterface {
+ public:
+  virtual ~StackInterface() {}
+  virtual void Push(const T& x) = 0;
+};
+
+template <typename T>
+class MockStack : public StackInterface<T> {
+ public:
+  MOCK_METHOD(void, Push, (const T& x), (override));
+};
+```
+
+### Handling Unusual Method Qualifiers
+
+The macro supports declaring methods with calling conventions (e.g., `Calltype(STDMETHODCALLTYPE)`), ref-qualified methods (`ref(&)`), and noexcept.
+
+---
+
+## 3. Specifying Mock Behavior
+
+### Expectations with `EXPECT_CALL`
+
+Set expectations on mock method invocations specifying:
+- Which methods are expected to be called.
+- Argument constraints using *matchers*.
+- Expected call counts via *cardinalities*.
+- Ordering constraints.
+- Actions to perform when called.
+
+```cpp
+EXPECT_CALL(mock_object, Method(arg_matchers...))
+    .Times(cardinality)
+    .WillOnce(action)
+    .WillRepeatedly(action)
+    .InSequence(sequence)...;
+```
+
+**Example:**
+
+```cpp
+using ::testing::Return;
+
+EXPECT_CALL(turtle, GetX())
+    .Times(3)
+    .WillOnce(Return(100))
+    .WillOnce(Return(150))
+    .WillRepeatedly(Return(200));
+```
+
+This expectation says:
+- Expected 3 calls.
+- First returns 100, second 150, and subsequent calls return 200.
+
+### Argument Matchers
+
+Use built-in or custom matchers to check argument values precisely or loosely:
+- `_` matches any value.
+- `Eq(val)` matches exact value `val`.
+- Comparisons like `Ge(10)`, `Lt(20)` for relational matchers.
+
+### Default Actions with `ON_CALL`
+
+Define default behavior without expecting calls:
+
+```cpp
+ON_CALL(mock_object, Method(_))
+    .WillByDefault(Return(default_value));
+```
+
+This lets a method respond with a default action even if no explicit expectation is set.
+
+### Cardinalities
+
+Specify how many times a method is expected to be invoked.
+- `Times(n)` for exact n times.
+- `AtLeast(n)`, `AtMost(n)` for flexible ranges.
+- `AnyNumber()` allows any calls.
+
+If omitted, gMock infers cardinality:
+- No action clauses: `Times(1)`.
+- `n` `WillOnce` clauses: `Times(n)`.
+- `n` `WillOnce` + one `WillRepeatedly`: `Times(AtLeast(n))`.
+
+### Ordering Calls
+
+By default, calls matching expectations can occur in any order.
+Use `InSequence` or `After` clauses to require strict or partial ordering.
+
+```cpp
+{
+  InSequence seq;
+  EXPECT_CALL(foo, A());
+  EXPECT_CALL(foo, B());
+}
+```
+
+Enforces that `A()` is called before `B()`.
+
+---
+
+## 4. Strictness Levels: Nice, Naggy, and Strict Mocks
+
+gMock categorizes the handling of *uninteresting calls* (calls to mock methods without expectations) into three modes:
+
+| Mock Kind    | Behavior on Uninteresting Calls         |
+|--------------|----------------------------------------|
+| **NiceMock** | Silently ignores and suppresses warnings |
+| **NaggyMock** | Issues warnings (default for raw mocks) |
+| **StrictMock** | Treats uninteresting calls as test failures |
+
+### Usage
+
+Wrap your mock class with one of these templates to control strictness:
+
+```cpp
+using ::testing::NiceMock;
+using ::testing::NaggyMock;
+using ::testing::StrictMock;
+
+NiceMock<MockFoo> nice_foo;      // No warnings
+NaggyMock<MockFoo> naggy_foo;    // Warnings (default)
+StrictMock<MockFoo> strict_foo;  // Errors for unexpected calls
+```
+
+### Tips
+
+- Prefer `NiceMock` in stable tests for cleaner outputs.
+- Use `NaggyMock` during development to be alerted of unexpected calls.
+- Reserve `StrictMock` for tests where strict call control is required.
+
+<Tip>
+`NiceMock`, `NaggyMock`, and `StrictMock` inherit constructors of the base mock, so you can construct them with the same parameters.
+</Tip>
+
+---
+
+## 5. Leveraging C++ Metaprogramming for Type Safety and Flexibility
+
+GoogleMock uses advanced C++ metaprogramming techniques to:
+
+- Generate mock methods automatically from declarations using macros.
+- Ensure type safety by matching method signatures strictly.
+- Support overloaded methods, const and noexcept qualifiers, and template methods.
+- Provide flexible syntax for matching arguments and chaining actions.
+
+This metaprogramming foundation allows gMock to adapt seamlessly to complex interfaces, enabling developers to write mocks efficiently without sacrificing correctness.
+
+---
+
+## 6. Typical Mocking Workflow
+
+1. **Define Mock Classes**
+   - Subclass the interface.
+   - Use `MOCK_METHOD` to mock all virtual methods you want to observe/control.
+
+2. **Create Mock Objects**
+   - Instantiate mock objects.
+   - Consider wrapping them with `NiceMock` or `StrictMock` if needed.
+
+3. **Set Default Actions**
+   - Use `ON_CALL` to specify default behaviors (optional).
+
+4. **Set Expectations**
+   - Define precise expectations with `EXPECT_CALL`, including argument matchers, call counts, and ordering.
+
+5. **Exercise Code Under Test**
+   - Call the code that interacts with mocks.
+
+6. **Automatic Verification**
+   - Verification is done automatically when mocks are destructed, ensuring all expectations were met.
+
+<Tip>
+Always set expectations before exercising the mock. Otherwise, behavior is undefined and verification may fail unpredictably.
+</Tip>
+
+---
+
+## 7. Best Practices and Tips
+
+- **Virtual Destructors:** Interfaces to be mocked must have virtual destructors.
+- **Order of Expectations:** Use `InSequence` or `Sequence` objects for ordered calls.
+- **Be Judicious with Strictness:** Too strict mocks cause brittle tests; prefer `NiceMock` unless strictness is crucial.
+- **Use Wildcard `_` to Avoid Over-Specification:** Only constrain arguments critical to the test.
+- **Combine `ON_CALL` and `EXPECT_CALL`:** Use `ON_CALL` for common default behaviors and `EXPECT_CALL` to specify what must be verified.
+- **Avoid Mocking Non-Virtual Methods Unless Using High-Perf Techniques:** Prefer interface-based design.
+- **Delegate to Fakes or Real Objects:** For complex behavior reuse, delegate to a fake or the real implementation.
+- **Check for Uninteresting Calls:** Warnings guide you to potentially missing expectations.
+
+---
+
+## 8. Troubleshooting Common Issues
+
+### Unexpected Calls to Real Methods
+- Ensure methods are virtual to be mockable.
+
+### Overloaded Method Ambiguities
+- Use explicit overload selection helpers or specify argument types clearly.
+
+### Uninteresting Call Warnings
+- Add appropriate `EXPECT_CALL` or switch to `NiceMock`.
+
+### Memory Leaks and Missing Destructor Calls
+- Confirm virtual destructors.
+
+### Slow Mock Compilation
+- Define constructors and destructors of mocks out-of-line.
+
+### Exceptions in `NiceMock` with Unknown Return Types
+- Some return types require custom actions or default value settings.
+
+---
+
+## 9. Further Reading
+
+- [gMock for Dummies (beginner-friendly tutorial)](https://google.github.io/googletest/gmock_for_dummies.html)
+- [gMock Cheat Sheet (quick reference)](https://google.github.io/googletest/gmock_cheat_sheet.html)
+- [Mocking Reference (detailed macro and API doc)](docs/reference/mocking.md)
+- [gMock Cookbook (recipes and patterns)](docs/gmock_cook_book.md)
+
+---
+
+## Appendix: Example Usage
+
+```cpp
+#include <gmock/gmock.h>
+#include <gtest/gtest.h>
+
 class Turtle {
  public:
   virtual ~Turtle() {}
   virtual void PenUp() = 0;
+  virtual void PenDown() = 0;
   virtual void Forward(int distance) = 0;
   virtual int GetX() const = 0;
 };
@@ -39,279 +314,52 @@ class Turtle {
 class MockTurtle : public Turtle {
  public:
   MOCK_METHOD(void, PenUp, (), (override));
+  MOCK_METHOD(void, PenDown, (), (override));
   MOCK_METHOD(void, Forward, (int distance), (override));
   MOCK_METHOD(int, GetX, (), (const, override));
 };
+
+using ::testing::AtLeast;
+using ::testing::Return;
+
+TEST(PaintTest, DrawsLine) {
+  MockTurtle turtle;
+
+  EXPECT_CALL(turtle, PenDown()).Times(AtLeast(1));
+  EXPECT_CALL(turtle, Forward(100)).Times(1);
+  ON_CALL(turtle, GetX()).WillByDefault(Return(42));
+
+  // Code under test uses mock turtle
+  turtle.PenDown();
+  turtle.Forward(100);
+  int x = turtle.GetX();
+  EXPECT_EQ(x, 42);
+}
 ```
 
-<Note>
-If your method signatures include types with commas (like `std::pair<bool, int>`), wrap them in parentheses or create type aliases to prevent parsing issues in `MOCK_METHOD`.
-</Note>
-
-### Supporting Advanced Scenarios
-
-- Overloaded methods can be mocked individually. Ensure to mock all overloads you intend to use or bring others into scope with `using`.
-- Mocking non-virtual methods can be achieved by creating unrelated mock classes with the same interface and using template injection.
-- Mocking class templates works identically, templated on the mocked type.
+In this example, `MockTurtle` mocks the `Turtle` interface with `MOCK_METHOD`. Expectations and default actions are set, and the code exercise triggers mock responses, verified automatically.
 
 ---
 
-## 2. Specifying Behavior and Expectations
-
-gMock lets you define how mock methods behave and how often and in which order they should be called.
-
-### Default Behavior with `ON_CALL`
-Use `ON_CALL(mock, Method(matchers))` to specify the default action for mock methods without setting expectations on when and how often the method should be invoked. It defines what happens when calls do not explicitly match expectations.
-
-Example:
-```cpp
-ON_CALL(turtle, GetX()).WillByDefault(Return(10));
-```
-
-This ensures that calls to `GetX()` return 10 unless overridden by an explicit expectation.
-
-<Info>
-Use `ON_CALL` for setting up shared default behaviors typically in mock constructors or test fixtures.
-</Info>
-
-### Defining Expected Calls with `EXPECT_CALL`
-Use `EXPECT_CALL(mock, Method(matchers))` to state that a method call is expected, along with optional chaining to specify detailed conditions:
-
-```cpp
-EXPECT_CALL(mock, Method(matchers))
-    .With(multi_arg_matcher)  // Optional tuple-based matcher
-    .Times(cardinality)       // How many times the call is expected
-    .InSequence(sequences...) // Call order constraints
-    .After(expectations...)   // Partial order constraints
-    .WillOnce(action)         // Actions on calls (single calls)
-    .WillRepeatedly(action)   // Actions after WillOnce calls exhausted
-    .RetiresOnSaturation();   // Retire expectation when saturated
-```
-
-Key points:
-- `Times()` accepts cardinalities: exact, ranges like `AtLeast(3)`, or `AnyNumber()`.
-- Multiple `WillOnce()` clauses define sequential actions for successive calls.
-- Use sequences or `After()` to impose call ordering.
-- The chaining methods must be used in order; for example, `Times()` before `WillOnce()`.
-
-Example:
-```cpp
-EXPECT_CALL(turtle, Forward(100))
-    .Times(2)
-    .WillOnce(Return())
-    .WillOnce(Return())
-    .RetiresOnSaturation();
-```
-
-### Balancing Verification and Flexibility
-
-- Over-specification (too strict expectations) leads to brittle tests prone to break on internal changes.
-- Under-specification weakens test value, allowing bugs to slip through.
-- Use `ON_CALL` liberally to define default, common behavior.
-- Use `EXPECT_CALL` thoughtfully to verify *contracts* and critical interaction.
-
-<Check>
-Only add `EXPECT_CALL` if your test explicitly requires verification that a call occurs.
-</Check>
-
----
-
-## 3. Matchers and Argument Matching
-
-Matchers specify how to verify that the arguments of mock method calls meet expectations. They allow matching specific values or validating complex conditions.
-
-- `_` is the wildcard matcher that matches anything.
-- Built-in matchers like `Eq()`, `Ge()`, `NotNull()`, and `HasSubstr()` provide powerful matching.
-- Composite matchers using `AllOf()`, `AnyOf()`, and `Not()` enable complex logical conditions.
-- You can pass matchers as single arguments or combined as multi-argument tuple matchers.
-
-Example:
-```cpp
-EXPECT_CALL(turtle, GoTo(50, _));  // X must exactly equal 50.
-EXPECT_CALL(mock, Process(_, NotNull()));  // Second argument can't be null.
-EXPECT_CALL(mock, SetPosition(_, _)).With(Lt());  // First arg < second.
-```
-
----
-
-## 4. Cardinality and Call Count Control
-
-Cardinality controls "how often" you expect a mock method to be called:
-
-| Cardinality      | Description                                 |
-| ---------------- | -------------------------------------------|
-| `Exactly(n)` or `n` | Called exactly n times.                    |
-| `AtLeast(n)`     | Called at least n times.                     |
-| `AtMost(n)`      | Called at most n times.                      |
-| `Between(m, n)`  | Called between m and n times inclusive.     |
-| `AnyNumber()`    | Called any number of times (including zero).|
-
-By default, if no `Times()` is specified, gMock chooses:
-- `Times(1)` if no `WillOnce()` or `WillRepeatedly()`.
-- `Times(n)` if n `WillOnce()` actions specified and no `WillRepeatedly()`.
-- `Times(AtLeast(n))` if n `WillOnce()` actions and a `WillRepeatedly()`.
-
-Incorrect cardinalities (too many or too few calls) result in verification failures.
-
----
-
-## 5. Strictness Modes: Nice, Naggy, and Strict Mocks
-
-gMock allows you to control how it treats calls to mock methods that do not match any expectation.
-
-- **NaggyMock** (default) prints warnings for uninteresting calls (methods without expectations) but continues.
-- **NiceMock** suppresses warnings for uninteresting calls, making test output cleaner.
-- **StrictMock** treats uninteresting calls as errors, failing the test immediately.
-
-Usage:
-```cpp
-using ::testing::NiceMock;
-using ::testing::StrictMock;
-
-NiceMock<MockFoo> nice_mock;  // Suppresses uninteresting call warnings.
-StrictMock<MockFoo> strict_mock;  // Fails on uninteresting calls.
-```
-
-<Warning>
-Avoid overusing strict mocks unless verification needs are high. Strict mocks can make refactoring and general test maintenance more difficult.
-</Warning>
-
----
-
-## 6. Ordering Calls and Partial Ordering
-
-### Sequences
-
-Expectations involved in the same `Sequence` object are expected to occur in the order declared.
-
-Example:
-```cpp
-Sequence seq;
-EXPECT_CALL(mock, Initialize()).InSequence(seq);
-EXPECT_CALL(mock, Process()).InSequence(seq);
-EXPECT_CALL(mock, Finish()).InSequence(seq);
-```
-
-### Partial Orders
-
-You can impose partial orders with `.After()` to specify that a call must happen after multiple other expectations or sets.
-
-Example:
-```cpp
-Expectation init_a = EXPECT_CALL(mock, InitA());
-Expectation init_b = EXPECT_CALL(mock, InitB());
-EXPECT_CALL(mock, Run()).After(init_a, init_b);
-```
-
-With these mechanisms, you can specify strict, partial, or unordered call orders as needed for your tests.
-
----
-
-## 7. Actions: Controlling Behavior of Mock Methods
-
-Actions define the behavior executed when a mock method is called.
-
-### Built-in Actions
-
-- `Return(value)`: return the specified value.
-- `ReturnRef(variable)`: return a reference.
-- `ReturnPointee(pointer)`: return the value pointed to.
-- `DoDefault()`: perform the default behavior.
-- `Invoke(function)`: invoke an arbitrary function or callable.
-- `SetArgPointee<N>(value)`: set the N-th argument (pointer) to a value.
-- `SetArrayArgument<N>(begin, end)`: set an array argument.
-- `DoAll(action1, action2, ...)`: perform a sequence of actions.
-- `IgnoreResult(action)`: ignore return value of an action.
-
-### Custom Actions
-
-You can define your own action using lambdas, functors, or the `ACTION` macros.
-
-### Chaining Actions
-
-Multiple `WillOnce()` clauses can specify different behavior for consecutive calls; an optional `WillRepeatedly()` clause defines behavior beyond those.
-
-Example:
-```cpp
-EXPECT_CALL(mock, GetValue())
-    .WillOnce(Return(1))
-    .WillOnce(Return(2))
-    .WillRepeatedly(Return(3));
-```
-
----
-
-## 8. Common Pitfalls and Best Practices
-
-- **Order and Timing**: Set all expectations and default behaviors **before** exercising code using mocks.
-- **Retirement of Expectations**: Use `.RetiresOnSaturation()` to make expectations non-sticky, avoiding unexpected upper-bound violations when reusing similar expectations.
-- **Match Specificity**: Be as specific as necessary to verify contract behavior but avoid over-specification that causes brittle tests.
-- **Suppressing Uninteresting Call Warnings**: Prefer `NiceMock` or explicit `EXPECT_CALL` with `.Times(AnyNumber())` over suppressing warnings blindly.
-
-<Warning>
-Never set expectations on mocks after the code that uses them has run, as this leads to undefined behavior.
-</Warning>
-
----
-
-## 9. Summary
-
-GoogleMock's mocking fundamentals build a bridge between your test code and external dependencies, enabling interaction-based testing with expressive, precise, and maintainable test doubles. By mastering mock class creation, use of expectations, matchers, actions, strictness modes, and call ordering, you gain full control over how code interacts with its collaborators, thus improving test quality and developer productivity.
-
----
-
-## References
-
-- [GoogleMock gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html)
-- [Defining and Using Mocks](https://google.github.io/googletest/api/gmock_reference.html#defining-and-using-mocks)
-- [Expectations and Cardinalities](https://google.github.io/googletest/api/gmock_reference.html#expectations-and-cardinalities)
-- [Actions and Side Effects](https://google.github.io/googletest/api/gmock_reference.html#actions-and-side-effects)
-- [Strictness Modes for Mocks](https://google.github.io/googletest/api/gmock_reference.html#mock-strictness-modes)
-- [Matchers Reference](https://google.github.io/googletest/api/gmock_matchers.html)
-
----
-
-## Practical Tips
-
-- Design your mock interfaces carefully; mock only what is necessary.
-- Use `ON_CALL` for shared default behavior and minimal `EXPECT_CALL` for verification.
-- When matching overloaded functions, specify argument types or use `Const()` helper.
-- Take advantage of sequences and `.RetiresOnSaturation()` to avoid brittle, order-dependent tests.
-- Use `NiceMock` to suppress noisy warnings when suitable.
-
----
-
-This fundamental understanding of GoogleMock equips users with the tools to write clear, robust, and maintainable tests that fully harness mocking capabilities.
-
----
+## Summary Diagram: Mocking Workflow
 
 ```mermaid
 graph TD
-  subgraph Core Mocking Components
-    MockClass["Mock Class"]
-    MOCK_METHOD["MOCK_METHOD Macro"]
-    Expectation["EXPECT_CALL Expectation"]
-    ON_CALL["ON_CALL Default Behavior"]
-    Matcher["Matchers for Arguments"]
-    Action["Actions for Behavior"]
-    Cardinality["Cardinality (Times) Specification"]
-    Strictness["Strictness Modes: Nice, Naggy, Strict"]
-    Sequence["Sequences for Call Ordering"]
+  DefineInterface["Define Virtual Interface"] --> DefineMock["Define Mock Class Using MOCK_METHOD"]
+  DefineMock --> CreateMocks["Create Mock Objects"]
+  CreateMocks --> SetDefaults["Set Default Actions with ON_CALL"]
+  SetDefaults --> SetExpectations["Set Expectations with EXPECT_CALL"]
+  SetExpectations --> ExerciseCode["Exercise Code Under Test"]
+  ExerciseCode --> Verify["Automatic Verification on Mock Destruction"]
+
+  subgraph Strictness
+    direction LR
+    NiceMock["NiceMock (ignore uninteresting calls)"]
+    NaggyMock["NaggyMock (warn on uninteresting calls, default)"]
+    StrictMock["StrictMock (fail on uninteresting calls)"]
   end
 
-  MockClass --> MOCK_METHOD
-  MOCK_METHOD --> Expectation
-  MOCK_METHOD --> ON_CALL
-  Expectation --> Matcher
-  Expectation --> Cardinality
-  Expectation --> Action
-  Expectation --> Sequence
-  ON_CALL --> Matcher
-  ON_CALL --> Action
-  MockClass --> Strictness
-
-  Strictness -.-> Expectation
-  Strictness -.-> ON_CALL
-  Sequence -- Enforces call order --> Expectation
+  CreateMocks --> Strictness
 ```
 
+This flow encapsulates how users move from defining an interface and mock, to setting behaviors, running tests, and having expectations validated automatically, with control over the strictness level.
