--- a/faq/common-questions/faq-getting-started.mdx
+++ b/faq/common-questions/faq-getting-started.mdx
@@ -1,276 +1,234 @@
 ---
-title: "Getting Started: Key Questions"
-description: "Answers to essential questions about installing, building, and running tests with GoogleTest and GoogleMock—including setup, required dependencies, and first steps for both frameworks. This page helps new users get up and running with minimal friction."
+title: "How do I install and set up GoogleTest and GoogleMock?"
+description: "Step-by-step guidance on acquiring, building, and integrating GoogleTest/GoogleMock into your project, including references to Bazel and CMake quickstart workflows. Covers minimum C++ versions, dependencies, and common setup pitfalls."
 ---
 
-# Getting Started: Key Questions
+# How do I install and set up GoogleTest and GoogleMock?
 
-This page provides essential answers to questions about installing, building, and running tests using GoogleTest and GoogleMock. It covers critical first steps to help new users set up the frameworks with minimal friction.
-
----
-
-## 1. What Are GoogleTest and GoogleMock?
-
-GoogleTest is the industry-standard C++ testing framework designed to write and run C++ unit tests easily and reliably. GoogleMock (gMock) is the companion framework that lets you create mock classes and specify expectations on method calls to verify interactions between components.
-
-Together, they empower developers to write robust, maintainable tests that ensure code correctness while enabling design improvements through mocking dependencies.
+This guide provides clear, step-by-step instructions for acquiring, building, and integrating GoogleTest and GoogleMock into your C++ projects. It covers minimum C++ requirements, dependency management, and practical workflows for using build systems like Bazel and CMake. Alongside setup procedures, it highlights common pitfalls and tips to ensure a smooth installation experience.
 
 ---
 
-## 2. How Do I Get Started with GoogleTest and GoogleMock?
+## 1. Quick Overview
 
-To begin:
-
-1. **Install the frameworks** – GoogleTest and GoogleMock come bundled together. You can build and install them using your preferred build system such as CMake or Bazel.
-2. **Include Headers** – Your test source files should include `<gtest/gtest.h>` for GoogleTest features and `<gmock/gmock.h>` to access the mocking APIs.
-3. **Write Tests and Mocks**:
-   - Create test cases by deriving from `::testing::Test` or using `TEST()` macros.
-   - Define mock classes by inheriting interfaces and using the `MOCK_METHOD()` macro to mock virtual methods.
-4. **Set Expectations and Behaviors** – Use `EXPECT_CALL()` to specify how mocks should be called and `ON_CALL()` to define default behaviors.
-5. **Build and Run Tests** – Link your test binaries against the `gtest` and `gmock` libraries and run the tests using the provided test runner.
+GoogleTest (sometimes called googletest) and GoogleMock (gMock) are bundled together in one source distribution and repository. Installing both allows you to take advantage of a comprehensive C++ testing framework that includes automatic test discovery, rich assertions, test fixtures, parameterized tests, and full-featured mocking.
 
 ---
 
-## 3. What Are the Typical Dependencies and Requirements?
+## 2. Minimum Requirements and Dependencies
 
-- **C++ Standard**: Requires C++17 or newer.
-- **Compiler Support**: Compatible with most modern compilers supporting C++17.
-- **Build Tools**: CMake, Bazel, or your preferred build system.
-- **Runtime Environment**: Supports multiple platforms including Windows, Linux, and macOS.
-
-Make sure to verify your environment meets the prerequisites described in the [Prerequisites & System Requirements](https://google.github.io/googletest/faq/common-questions/faq-supported-platforms) documentation.
+- **C++ Standards**: Requires a C++11-compliant compiler or newer. Most modern compilers like GCC, Clang, MSVC, and libc++ fully support required features.
+- **Dependencies**: No external dependencies apart from a C++11 compatible toolchain.
 
 ---
 
-## 4. How Do I Install GoogleTest and GoogleMock?
+## 3. Acquiring GoogleTest and GoogleMock
 
-### Using CMake
+- Clone or download the repository from the official GitHub:
 
-1. Clone the GoogleTest repository:
+  ```bash
+  git clone https://github.com/google/googletest.git
+  ```
 
-   ```bash
-   git clone https://github.com/google/googletest.git
-   cd googletest
-   ```
+- The release artifacts bundle both GoogleTest and GoogleMock.
 
-2. Create a build directory and run CMake:
+---
+
+## 4. Installation Methods
+
+GoogleTest/gMock supports multiple common build workflows — this includes manual builds, CMake, and Bazel. Select the method that fits best with your project environment.
+
+### 4.1 Using CMake
+
+GoogleTest includes built-in CMake configuration files making integration straightforward.
+
+1. Create a build directory:
 
    ```bash
    mkdir build && cd build
-   cmake ..
-   make
-   sudo make install
    ```
 
-This builds and installs both GoogleTest and GoogleMock libraries.
+2. Configure with CMake (optionally specify install prefix):
 
-### Using Bazel
+   ```bash
+   cmake ../googletest
+   ```
 
-1. Add GoogleTest and GoogleMock dependencies in your `MODULE.bazel` or `WORKSPACE`.
-2. Reference gtest and gmock in your build targets.
-3. Build and run your tests using Bazel commands.
+3. Build and optionally install:
 
-Refer to the [Installing with Bazel](https://google.github.io/googletest/getting-started/setup-and-installation/installing-with-bazel) guide for further details.
+   ```bash
+   cmake --build . --target all
+   cmake --install .  # Optional
+   ```
+
+4. Link your test executables against googletest and googlemock libraries:
+
+   ```cmake
+   target_link_libraries(your_test PRIVATE gtest gmock)
+   ```
+
+This process supports automatic detection of minimum C++ versions and sets appropriate compiler flags.
+
+### 4.2 Using Bazel
+
+GoogleTest and GoogleMock come with Bazel build files (`BUILD.bazel`) facilitating integration in Bazel projects.
+
+- Add `@com_google_googletest//:gmock` and `@com_google_googletest//:gtest` as dependencies in your Bazel targets to use GoogleTest and GoogleMock.
+
+- The Bazel quickstart workflow allows seamless addition of GoogleTest to your builds with minimal configuration.
+
+### 4.3 Manual Build
+
+For advanced use cases or custom build systems:
+
+- Use the manual build instructions by compiling the source files directly.
+- Include the header files and source files of `googletest` and `googlemock` in your build.
+- Compile sample tests to validate your setup.
+
+Refer to the [Manual Build & Validation](getting-started/installation-configuration/manual-build-validation) page for detailed instructions.
 
 ---
 
-## 5. How Do I Create and Use a Mock Class?
+## 5. Setting up Your First Mock
 
-GoogleMock uses the `MOCK_METHOD` macro inside a subclass of your abstract base class or interface.
+Writing your first mock class and using GoogleMock is straightforward:
+
+1. Import GoogleMock header:
+
+   ```cpp
+   #include <gmock/gmock.h>
+   ```
+
+2. Define your interface with virtual methods (make sure the destructor is `virtual`):
+
+   ```cpp
+   class Turtle {
+    public:
+     virtual ~Turtle() {}
+     virtual void PenUp() = 0;
+     virtual void PenDown() = 0;
+     virtual void Forward(int distance) = 0;
+     // ... other virtual methods ...
+   };
+   ```
+
+3. Define a mock class that inherits from your interface using `MOCK_METHOD` macros:
+
+   ```cpp
+   class MockTurtle : public Turtle {
+    public:
+     MOCK_METHOD(void, PenUp, (), (override));
+     MOCK_METHOD(void, PenDown, (), (override));
+     MOCK_METHOD(void, Forward, (int distance), (override));
+     // ... other mock methods ...
+   };
+   ```
+
+4. Use mock objects in tests and set expectations using `EXPECT_CALL` and behaviors with `ON_CALL`.
 
 Example:
 
 ```cpp
-#include <gmock/gmock.h>  // Includes gMock.
+#include <gmock/gmock.h>
+#include <gtest/gtest.h>
 
-class Turtle {
- public:
-  virtual ~Turtle() {}
-  virtual void PenUp() = 0;
-  virtual void PenDown() = 0;
-  virtual void Forward(int distance) = 0;
-  virtual int GetX() const = 0;
-};
+using ::testing::AtLeast;
 
 class MockTurtle : public Turtle {
  public:
-  MOCK_METHOD(void, PenUp, (), (override));
-  MOCK_METHOD(void, PenDown, (), (override));
-  MOCK_METHOD(void, Forward, (int distance), (override));
-  MOCK_METHOD(int, GetX, (), (const, override));
+   MOCK_METHOD(void, PenDown, (), (override));
+   MOCK_METHOD(void, Forward, (int distance), (override));
 };
-```
 
-### Important Best Practices
-
-- Put all mock methods into the `public:` section so that `EXPECT_CALL` and `ON_CALL` can access them externally.
-- Mock only virtual methods.
-- Add the `override` qualifier to signify method overrides.
-
----
-
-## 6. How Do I Set Expectations on a Mock?
-
-Use `EXPECT_CALL(mock_object, Method(matchers))` to specify expected calls.
-
-Example:
-
-```cpp
-TEST(PainterTest, DrawsCircle) {
+TEST(PainterTest, CanDrawCircle) {
   MockTurtle turtle;
-  EXPECT_CALL(turtle, PenDown())
-      .Times(AtLeast(1));
+  EXPECT_CALL(turtle, PenDown()).Times(AtLeast(1));
+  EXPECT_CALL(turtle, Forward(100));
 
   Painter painter(&turtle);
-
   EXPECT_TRUE(painter.DrawCircle(0, 0, 10));
 }
 ```
 
-This test asserts that `PenDown()` is called at least once by `Painter::DrawCircle`.
+---
 
-### Key Points
+## 6. Common Pitfalls and Tips
 
-- Set expectations *before* exercising the code.
-- Matchers allow flexible argument checking (e.g. `_` means any value).
-- Cardinalities define how many times calls should occur (`Times(0)` means never called).
-- Actions (e.g., `WillOnce(Return(value))`) define return values or behaviors.
+- **Virtual Destructor:** Always declare a `virtual` destructor in interfaces intended for mocking to avoid resource leaks.
+- **Order of Expectations:** Set `EXPECT_CALL`s before the code under test invokes mock methods. Setting expectations afterward leads to undefined behavior.
+- **Overload Ambiguity:** For overloaded methods, you may need to disambiguate which overload to mock by specifying the method signature explicitly.
+- **Sticky Expectations:** Expectations remain active even if saturated unless explicitly retired with `.RetiresOnSaturation()` or organized in sequences.
+- **Uninteresting Calls:** Calls to mock methods without matching expectations produce warnings by default. Use `NiceMock` to suppress warnings or `StrictMock` to convert warnings to errors.
+- **Actions Evaluation:** Be careful that action clauses like `Return(n++)` evaluate expressions only once when setting expectations. Use lambdas for side-effectful or dynamically evaluated actions.
 
 ---
 
-## 7. What Is the Difference Between `EXPECT_CALL` and `ON_CALL`?
+## 7. Useful References and Next Steps
 
-- **`EXPECT_CALL`** sets an expectation that a call *must* happen, and fails tests if not met.
-- **`ON_CALL`** sets a default behavior for calls but does *not* require the call to happen.
-
-Use `ON_CALL` to define general mock behaviors you are not interested in verifying explicitly, and `EXPECT_CALL` to verify specific calls.
-
----
-
-## 8. How Do I Run My First Test?
-
-1. Write your test source code including `#include <gtest/gtest.h>` and/or `<gmock/gmock.h>`.
-2. Define tests using `TEST()` or `TEST_F()`.
-3. Build your test binary linking with GoogleTest and GoogleMock libraries.
-4. Run the test executable. It will run all registered tests and report results.
-
-If you installed GoogleTest and GoogleMock from source, you can find sample tests and test runners to help.
-
-Refer to [Writing and Running Your First Test](https://google.github.io/googletest/guides/getting-started/your-first-test) for detailed guidance.
+- [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html): Beginner-friendly tutorial on mocking
+- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html): Practical recipes and advanced mocking techniques
+- [Install with CMake](getting-started/installation-configuration/install-cmake): Detailed CMake-based installation guide
+- [Install with Bazel](getting-started/installation-configuration/install-bazel): Bazel build integration information
+- [Manual Build & Validation](getting-started/installation-configuration/manual-build-validation): Manual setup instructions
+- [GoogleTest Primer](https://google.github.io/googletest/primer.html): Basics of writing and running tests
+- [Mocking Reference](docs/reference/mocking.md): Full macro, API, and class reference
 
 ---
 
-## 9. What Common Issues Might I Face During Setup and How Do I Troubleshoot?
+## 8. Troubleshooting Setup Issues
 
-- Check your compiler supports C++17.
-- Ensure your build system correctly links GoogleTest and GoogleMock.
-- On Windows, consider inheritance from runtime libraries when linking.
-- If tests do not run or discover tests wrongly, verify proper initialization with `testing::InitGoogleMock(&argc, argv);`.
-- For issues with expectations not being verified, confirm that mock objects are destroyed or manually verify expectations.
-- Use the `--gmock_verbose=info` flag to see detailed mock call traces for diagnosis.
-
-See [Resolving Build & Integration Issues](https://google.github.io/googletest/getting-started/common-issues-and-troubleshooting/build-issues) and [Environment & Platform Issues](https://google.github.io/googletest/getting-started/common-issues-and-troubleshooting/environment-setup-problems) for detailed troubleshooting.
-
----
-
-## 10. What Are Best Practices for Success with GoogleMock?
-
-- Define mocks only for interfaces you own or control.
-- Use `NiceMock` or `StrictMock` wrappers to adjust warnings for uninteresting calls.
-- Set expectations before passing mocks to tested code.
-- Avoid over-specifying expectations to prevent brittle tests.
-- Use sequences (`InSequence`) to enforce call order when necessary.
-- Leverage the rich set of matchers for flexible argument verification.
-- Use `ON_CALL` for default behavior; reserve `EXPECT_CALL` for calls you want to verify.
-- Use the heap checker or manual verification (`Mock::VerifyAndClearExpectations()`) if your mock object is heap-allocated.
-
----
-
-## Additional Resources
-
-- [GoogleTest Primer](https://google.github.io/googletest/primer.html) — Learn to write basic tests
-- [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html) — Step-by-step guide to mocking
-- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) — Advanced mocking recipes
-- [gMock Cheat Sheet](https://google.github.io/googletest/gmock_cheat_sheet.html) — Quick syntax reference
-- [Mocking Reference](https://google.github.io/googletest/reference/mocking.html) — Core API specs
-
----
-
-## Troubleshooting Tips
-
-<AccordionGroup title="Common Setup and Testing Issues">
-<Accordion title="Tests fail to discover or run">
-Ensure you call `testing::InitGoogleMock(&argc, argv);` early in your main function. Confirm proper linking of GoogleTest and GoogleMock libraries.
-</Accordion>
-
-<Accordion title="Expectations silently not verified">
-Check that mock objects get destroyed to trigger verification, or call `Mock::VerifyAndClearExpectations(&mock);` manually before test ends.
-</Accordion>
-
-<Accordion title="Warnings about uninteresting calls">
-Use `NiceMock<T>` to suppress warnings or add `EXPECT_CALL(...).Times(AnyNumber())` to explicitly allow unexpected calls.
-</Accordion>
-
-<Accordion title="Compilation errors about MOCK_METHOD and commas in arguments">
-Wrap complicated return or argument types (with commas) in additional parentheses or define a type alias.
-</Accordion>
-</AccordionGroup>
+- If builds fail due to missing dependencies or C++ version issues, confirm your compiler supports C++11 or later.
+- Incorrect linkage errors often result from forgetting to link `gmock` and `gtest` libraries.
+- To verify your setup, compile and run [sample test files](getting-started/first-test/writing-basic-test).
+- Use CMake’s verbose build output or Bazel logs to diagnose build or integration problems.
+- Consult `--help` and GoogleTest flags for configuration options.
 
 ---
 
 ## Summary
-This guide empowers new users to get started with GoogleTest and GoogleMock. It covers setup, installation, writing mocks, setting expectations, running tests, and troubleshooting common pitfalls to ensure a smooth onboarding experience for effective C++ unit testing and mocking.
+
+Following these steps ensures you can quickly have GoogleTest and GoogleMock up and running, providing an effective foundation to write robust unit tests and mocks for C++ projects. This page focuses on acquisition, building, integration, and initial usage, setting you up for success in test-driven development workflows.
 
 ---
 
-<Check>
-Always write `EXPECT_CALL` statements before invoking code using mocks.
-Use `ON_CALL` to define default mock behaviors without enforcing call expectations.
-Verify compiler support for C++17 and correct build system configuration.
-Consider wrapping mocks with `NiceMock` or `StrictMock` for uninteresting call handling.
-Use `--gmock_verbose=info` for detailed debugging info.
-</Check>
+<Check>Remember: Always place your expectations before exercising code that invokes the mocks, and ensure interfaces have virtual destructors to prevent resource leaks.</Check>
 
 ---
 
-### Example Starting Point
+## Example Setup Workflow Recap
 
-```cpp
-#include <gtest/gtest.h>
-#include <gmock/gmock.h>
+<Steps>
+<Step title="Clone Source">
+Run `git clone https://github.com/google/googletest.git` to get the source.
+</Step>
+<Step title="Build with CMake">
+Configure and build in a separate directory:
 
-using ::testing::AtLeast;
-
-// Real interface
-class Turtle {
- public:
-  virtual ~Turtle() {}
-  virtual void PenUp() = 0;
-  virtual void PenDown() = 0;
-  virtual void Forward(int distance) = 0;
-  virtual int GetX() const = 0;
-};
-
-// Mock class
-class MockTurtle : public Turtle {
- public:
-  MOCK_METHOD(void, PenUp, (), (override));
-  MOCK_METHOD(void, PenDown, (), (override));
-  MOCK_METHOD(void, Forward, (int distance), (override));
-  MOCK_METHOD(int, GetX, (), (const, override));
-};
-
-// Example test
-TEST(TurtleTest, PenDownCalled) {
-  MockTurtle turtle;
-  EXPECT_CALL(turtle, PenDown()).Times(AtLeast(1));
-
-  // Your code that uses turtle
-  // e.g., Painter painter(&turtle);
-  //       painter.DrawCircle(0, 0, 10);
-}
+```bash
+mkdir build && cd build
+cmake ../googletest
+cmake --build .
 ```
+</Step>
+<Step title="Link Your Project">
+Add `gtest` and `gmock` targets as link dependencies in your CMakeLists.
+</Step>
+<Step title="Write Mock Classes">
+Use `MOCK_METHOD` macros to define mocks based on your interfaces.
+</Step>
+<Step title="Set Expectations & Test">
+Use `EXPECT_CALL` and `ON_CALL` to specify behavior, then run tests with `RUN_ALL_TESTS()`.
+</Step>
+</Steps>
 
 ---
 
-For further details and examples, explore the many comprehensive guides and references linked throughout this documentation.
+## Additional Help & Support
+
+- Engage with the [GoogleTest GitHub Issues](https://github.com/google/googletest/issues) for bug reports and questions.
+- Explore community forums or Stack Overflow for common integration problems.
+- Consult the detailed documentation tabs for Installation, Writing Tests, Mocking Patterns, and API References linked in the official docs navigation.
+
+---
+
+This completes the focused guidance on installing and setting up GoogleTest and GoogleMock.
